--- a/_includes/blocks/itembox-row.html
+++ b/_includes/blocks/itembox-row.html
@@ -8,6 +8,10 @@
   <li class="itemBox__cell">
     <div class="itemBox__cellInner">lorem ipsum dolor sit amet</div>
   </li>
+  <li class="itemBox__cell flex-grow-0">
+    <div class="itemBox__cellInner">
+    </div>
+  </li>
   <li class="itemBox__cell flex-grow-3">
     <div class="itemBox__cellInner">34342-34252345-342543523-343213124</div>
   </li>
