--- a/_includes/blocks/itembox.html
+++ b/_includes/blocks/itembox.html
@@ -10,22 +10,22 @@
     </li>
     <li class="itemBox__cell flex-grow-0 itemBox__cell--action">
       <div class="itemBox__cellInner">
-        <div class="itemBox__action itemBox__action--disabled" title="refresh">ހ</div>
+        <div class="itemBox__action itemBox__action--disabled" title="refresh"></div>
       </div>
     </li>
     <li class="itemBox__cell flex-grow-0 itemBox__cell--action">
       <div class="itemBox__cellInner">
-        <div class="itemBox__action" title="add">ނ</div>
+        <div class="itemBox__action" title="add"></div>
       </div>
     </li>
     <li class="itemBox__cell flex-grow-0 itemBox__cell--action">
       <div class="itemBox__cellInner">
-        <div class="itemBox__action" title="link">ރ</div>
+        <div class="itemBox__action" title="link"></div>
       </div>
     </li>
     <li class="itemBox__cell flex-grow-0 itemBox__cell--action JS_has-popup" data-popid="#multiSelector-columnpicker">
       <div class="itemBox__cellInner">
-        <div class="itemBox__action" title="arrange columns">ށ</div>
+        <div class="itemBox__action" title="arrange columns"></div>
       </div>
     </li>
   </ul>
@@ -33,7 +33,7 @@
   <ul class="itemBox__row itemBox__row--h2">
     <li class="itemBox__cell flex-grow-0 itemBox__cell--action JS_expand">
       <div class="itemBox__cellInner">
-        <div class="itemBox__action">ऄ</div>
+        <div class="itemBox__action"></div>
       </div>
     </li>
     <li class="itemBox__cell">
@@ -86,7 +86,7 @@
   <ul class="itemBox__row itemBox__row--item">
     <li class="itemBox__cell flex-grow-0 itemBox__cell--action JS_expand">
       <div class="itemBox__cellInner">
-        <div class="itemBox__action">ऄ</div>
+        <div class="itemBox__action"></div>
       </div>
     </li>
     <li class="itemBox__cell">
@@ -123,22 +123,22 @@
       </li>
       <li class="itemBox__cell flex-grow-0 itemBox__cell--action">
         <div class="itemBox__cellInner">
-          <div class="itemBox__action itemBox__action--disabled">ހ</div>
+          <div class="itemBox__action itemBox__action--disabled"></div>
         </div>
       </li>
       <li class="itemBox__cell flex-grow-0 itemBox__cell--action">
         <div class="itemBox__cellInner">
-          <div class="itemBox__action">ނ</div>
+          <div class="itemBox__action"></div>
         </div>
       </li>
       <li class="itemBox__cell flex-grow-0 itemBox__cell--action">
         <div class="itemBox__cellInner">
-          <div class="itemBox__action">ރ</div>
+          <div class="itemBox__action"></div>
         </div>
       </li>
       <li class="itemBox__cell flex-grow-0 itemBox__cell--action JS_has-popup" data-popid="#multiSelector-columnpicker">
         <div class="itemBox__cellInner">
-          <div class="itemBox__action">ށ</div>
+          <div class="itemBox__action"></div>
         </div>
       </li>
     </ul>
@@ -146,7 +146,7 @@
     <ul class="itemBox__row itemBox__row--h2">
       <li class="itemBox__cell flex-grow-0 itemBox__cell--action JS_expand">
         <div class="itemBox__cellInner">
-          <div class="itemBox__action">ऄ</div>
+          <div class="itemBox__action"></div>
         </div>
       </li>
       <li class="itemBox__cell">
@@ -176,28 +176,28 @@
           <div class="selector selector--expanded selector--multiselect JS_selector">
             <div class="selector__item selector__item--selected JS_selectorItem">
               <div class="selector__block">
-                <div class="selector__blockPart selector__blockPart--prefix" style="background-color: #0bda51;">ग़</div>
+                <div class="selector__blockPart selector__blockPart--prefix" style="background-color: #0bda51;"></div>
                 <div class="selector__blockPart selector__blockPart--field">UI/UX</div>
               </div>
             </div>
             <div class="selector__itemSeperator"></div>
             <div class="selector__item JS_selectorItem">
               <div class="selector__block">
-                <div class="selector__blockPart selector__blockPart--prefix" style="background-color: #00bfff;">ग़</div>
+                <div class="selector__blockPart selector__blockPart--prefix" style="background-color: #00bfff;"></div>
                 <div class="selector__blockPart selector__blockPart--field">Design</div>
               </div>
             </div>
             <div class="selector__itemSeperator"></div>
             <div class="selector__item selector__item--selected JS_selectorItem">
               <div class="selector__block">
-                <div class="selector__blockPart selector__blockPart--prefix" style="background-color: #e30022;">ग़</div>
+                <div class="selector__blockPart selector__blockPart--prefix" style="background-color: #e30022;"></div>
                 <div class="selector__blockPart selector__blockPart--field">Front-end</div>
               </div>
             </div>
             <div class="selector__itemSeperator"></div>
             <div class="selector__item JS_selectorItem">
               <div class="selector__block">
-                <div class="selector__blockPart selector__blockPart--prefix" style="background-color: #f4ca16;">ग़</div>
+                <div class="selector__blockPart selector__blockPart--prefix" style="background-color: #f4ca16;"></div>
                 <div class="selector__blockPart selector__blockPart--field">Important</div>
               </div>
             </div>
@@ -211,7 +211,7 @@
       <ul class="itemBox__row itemBox__row--item animate--loading">
         <li class="itemBox__cell flex-grow-0 itemBox__cell--action JS_expand">
           <div class="itemBox__cellInner">
-            <div class="itemBox__action">ऄ</div>
+            <div class="itemBox__action"></div>
           </div>
         </li>
         <li class="itemBox__cell">
@@ -226,7 +226,7 @@
             <div class="selector selector--expanded selector--multiselect JS_selector">
               <div class="selector__item  selector__item--selected JS_selectorItem">
                 <div class="selector__block">
-                  <div class="selector__blockPart selector__blockPart--prefix" style="background-color: #0bda51;">ग़</div>
+                  <div class="selector__blockPart selector__blockPart--prefix" style="background-color: #0bda51;"></div>
                   <div class="selector__blockPart selector__blockPart--label">design</div>
                   <div class="selector__blockSeperator"></div>
                   <div class="selector__blockPart selector__blockPart--field">UI/UX</div>
@@ -235,7 +235,7 @@
               <div class="selector__itemSeperator"></div>
               <div class="selector__item selector__item--selected JS_selectorItem">
                 <div class="selector__block">
-                  <div class="selector__blockPart selector__blockPart--prefix" style="background-color: orange;">ग़</div>
+                  <div class="selector__blockPart selector__blockPart--prefix" style="background-color: orange;"></div>
                   <div class="selector__blockPart selector__blockPart--label">comp</div>
                   <div class="selector__blockSeperator"></div>
                   <div class="selector__blockPart selector__blockPart--field">IT</div>
@@ -244,7 +244,7 @@
               <div class="selector__itemSeperator"></div>
               <div class="selector__item JS_selectorItem">
                 <div class="selector__block">
-                  <div class="selector__blockPart selector__blockPart--prefix" style="background-color: blue;">ग़</div>
+                  <div class="selector__blockPart selector__blockPart--prefix" style="background-color: blue;"></div>
                   <div class="selector__blockPart selector__blockPart--label">dev</div>
                   <div class="selector__blockSeperator"></div>
                   <div class="selector__blockPart selector__blockPart--field">Back-end</div>
@@ -253,7 +253,7 @@
               <div class="selector__itemSeperator"></div>
               <div class="selector__item JS_selectorItem">
                 <div class="selector__block">
-                  <div class="selector__blockPart selector__blockPart--prefix" style="background-color: #f4ca16;">ग़</div>
+                  <div class="selector__blockPart selector__blockPart--prefix" style="background-color: #f4ca16;"></div>
                   <div class="selector__blockPart selector__blockPart--label">status</div>
                   <div class="selector__blockSeperator"></div>
                   <div class="selector__blockPart selector__blockPart--field">Important</div>
@@ -273,22 +273,22 @@
         </li>
         <li class="itemBox__cell flex-grow-0 itemBox__cell--action">
           <div class="itemBox__cellInner">
-            <div class="itemBox__action itemBox__action--disabled">ހ</div>
+            <div class="itemBox__action itemBox__action--disabled"></div>
           </div>
         </li>
         <li class="itemBox__cell flex-grow-0 itemBox__cell--action">
           <div class="itemBox__cellInner">
-            <div class="itemBox__action">ނ</div>
+            <div class="itemBox__action"></div>
           </div>
         </li>
         <li class="itemBox__cell flex-grow-0 itemBox__cell--action">
           <div class="itemBox__cellInner">
-            <div class="itemBox__action">ރ</div>
+            <div class="itemBox__action"></div>
           </div>
         </li>
         <li class="itemBox__cell flex-grow-0 itemBox__cell--action JS_has-popup" data-popid="#multiSelector-columnpicker">
           <div class="itemBox__cellInner">
-            <div class="itemBox__action">ށ</div>
+            <div class="itemBox__action"></div>
           </div>
         </li>
       </ul>
@@ -296,7 +296,7 @@
       <ul class="itemBox__row itemBox__row--h2">
         <li class="itemBox__cell flex-grow-0 itemBox__cell--action JS_expand">
           <div class="itemBox__cellInner">
-            <div class="itemBox__action">ऄ</div>
+            <div class="itemBox__action"></div>
           </div>
         </li>
         <li class="itemBox__cell">
