--- a/_includes/blocks/popup/ms-tags-colors-suggestions.html
+++ b/_includes/blocks/popup/ms-tags-colors-suggestions.html
@@ -22,7 +22,7 @@
       </li>
       <li class="itemBox__cell flex-grow-0 itemBox__cell--action JS_itemBox__cell--remove">
         <div class="itemBox__cellInner">
-          <div class="itemBox__action JS_itemBoxTable__action--remove">—</div>
+          <div class="itemBox__action JS_itemBoxTable__action--remove"></div>
         </div>
       </li>
     </ul>
