--- a/_includes/javascript/newSelectedItem.html
+++ b/_includes/javascript/newSelectedItem.html
@@ -9,7 +9,7 @@
   </li>
   <li class="itemBox__cell flex-grow-0 itemBox__cell--action JS_itemBox__action">
     <div class="itemBox__cellInner">
-      <i class="itemBox__action itemBox__action--secondary JS_itemBox__action--remove">—</i>
+      <i class="itemBox__action itemBox__action--secondary JS_itemBox__action--remove"></i>
     </div>
   </li>
 </ul>
