--- a/_includes/popups/filter-tags.html
+++ b/_includes/popups/filter-tags.html
@@ -16,7 +16,7 @@
     <ul class="itemBox__row itemBox__row--item JS_selectionTitle">
       <li class="itemBox__cell itemBox__cell--action JS_toggle">
         <div class="itemBox__cellInner">
-          <div class="itemBox__action">ऄ Selected</div>
+          <div class="itemBox__action"> Selected</div>
         </div>
       </li>
       <li class="itemBox__cell align-right">
@@ -26,7 +26,7 @@
       </li>
       <li class="itemBox__cell flex-grow-0 itemBox__cell--action JS_itemBox__cell--remove JS_itemBox__cell--removeAll JS_itemBox__action">
         <div class="itemBox__cellInner">
-          <div class="itemBox__action JS_itemBox__action--remove JS_itemBox__action--removeAll JS_itemBox__action--removeAllSelected">—</div>
+          <div class="itemBox__action JS_itemBox__action--remove JS_itemBox__action--removeAll JS_itemBox__action--removeAllSelected"></div>
         </div>
       </li>
     </ul>
@@ -35,7 +35,7 @@
       <ul class="itemBox__row itemBox__row--item JS_selectionTitleInclude">
         <li class="itemBox__cell itemBox__cell--action JS_toggle">
           <div class="itemBox__cellInner">
-            <div class="itemBox__action">ऄ Include</div>
+            <div class="itemBox__action"> Include</div>
           </div>
         </li>
         <li class="itemBox__cell align-right">
@@ -45,7 +45,7 @@
         </li>
         <li class="itemBox__cell flex-grow-0 itemBox__cell--action JS_itemBox__cell--remove JS_itemBox__cell--removeAll JS_itemBox__action">
           <div class="itemBox__cellInner">
-            <div class="itemBox__action JS_itemBox__action--remove JS_itemBox__action--removeAll JS_itemBox__action--removeAllSelected">—</div>
+            <div class="itemBox__action JS_itemBox__action--remove JS_itemBox__action--removeAll JS_itemBox__action--removeAllSelected"></div>
           </div>
         </li>
       </ul>
@@ -59,7 +59,7 @@
                 <div class="selector selector--readonly">
                   <div class="selector__item">
                     <div class="selector__block">
-                      <div class="selector__blockPart selector__blockPart--prefix JS_Color JS_Color--prefix" style="background-color: #00bfff;" data-color="#00bfff">ग़</div>
+                      <div class="selector__blockPart selector__blockPart--prefix JS_Color JS_Color--prefix" style="background-color: #00bfff;" data-color="#00bfff"></div>
                       <div class="selector__blockPart selector__blockPart--field JS_text">Design</div>
                     </div>
                   </div>
@@ -75,7 +75,7 @@
           </li>
           <li class="itemBox__cell flex-grow-0 itemBox__cell--action JS_itemBox__cell--remove JS_itemBox__action">
             <div class="itemBox__cellInner">
-              <div class="itemBox__action itemBox__action--secondary JS_itemBox__action--remove">—</div>
+              <div class="itemBox__action itemBox__action--secondary JS_itemBox__action--remove"></div>
             </div>
           </li>
         </ul>
@@ -87,7 +87,7 @@
                 <div class="selector selector--readonly">
                   <div class="selector__item">
                     <div class="selector__block">
-                      <div class="selector__blockPart selector__blockPart--prefix JS_Color JS_Color--prefix" style="background-color: #0bda51;" data-color="#0bda51">ग़</div>
+                      <div class="selector__blockPart selector__blockPart--prefix JS_Color JS_Color--prefix" style="background-color: #0bda51;" data-color="#0bda51"></div>
                       <div class="selector__blockPart selector__blockPart--field JS_text">Marketing</div>
                     </div>
                   </div>
@@ -103,7 +103,7 @@
           </li>
           <li class="itemBox__cell flex-grow-0 itemBox__cell--action JS_itemBox__cell--remove JS_itemBox__action">
             <div class="itemBox__cellInner">
-              <div class="itemBox__action itemBox__action--secondary JS_itemBox__action--remove">—</div>
+              <div class="itemBox__action itemBox__action--secondary JS_itemBox__action--remove"></div>
             </div>
           </li>
         </ul>
@@ -112,7 +112,7 @@
       <ul class="itemBox__row itemBox__row--item JS_selectionTitleExclude">
         <li class="itemBox__cell itemBox__cell--action JS_toggle">
           <div class="itemBox__cellInner">
-            <div class="itemBox__action">ऄ Exclude</div>
+            <div class="itemBox__action"> Exclude</div>
           </div>
         </li>
         <li class="itemBox__cell align-right">
@@ -122,7 +122,7 @@
         </li>
         <li class="itemBox__cell flex-grow-0 itemBox__cell--action JS_itemBox__cell--remove JS_itemBox__cell--removeAll JS_itemBox__action">
           <div class="itemBox__cellInner">
-            <div class="itemBox__action itemBox__action--secondary JS_itemBox__action--remove JS_itemBox__action--removeAll JS_itemBox__action--removeAllSelected">—</div>
+            <div class="itemBox__action itemBox__action--secondary JS_itemBox__action--remove JS_itemBox__action--removeAll JS_itemBox__action--removeAllSelected"></div>
           </div>
         </li>
       </ul>
@@ -138,7 +138,7 @@
                     <div class="selector selector--readonly">
                       <div class="selector__item">
                         <div class="selector__block">
-                          <div class="selector__blockPart selector__blockPart--prefix JS_Color JS_Color--prefix" style="background-color: #f4ca16;" data-color="#f4ca16">ग़</div>
+                          <div class="selector__blockPart selector__blockPart--prefix JS_Color JS_Color--prefix" style="background-color: #f4ca16;" data-color="#f4ca16"></div>
                           <div class="selector__blockPart selector__blockPart--field JS_text">Front-end</div>
                         </div>
                       </div>
@@ -154,7 +154,7 @@
               </li>
               <li class="itemBox__cell flex-grow-0 itemBox__cell--action JS_itemBox__cell--remove JS_itemBox__action">
                 <div class="itemBox__cellInner">
-                  <div class="itemBox__action itemBox__action--secondary JS_itemBox__action--remove">—</div>
+                  <div class="itemBox__action itemBox__action--secondary JS_itemBox__action--remove"></div>
                 </div>
               </li>
             </ul>
@@ -167,7 +167,7 @@
                     <div class="selector selector--readonly">
                       <div class="selector__item">
                         <div class="selector__block">
-                          <div class="selector__blockPart selector__blockPart--prefix JS_Color JS_Color--prefix" style="background-color: #e30022;" data-color="#e30022">ग़</div>
+                          <div class="selector__blockPart selector__blockPart--prefix JS_Color JS_Color--prefix" style="background-color: #e30022;" data-color="#e30022"></div>
                           <div class="selector__blockPart selector__blockPart--field JS_text">Back-end</div>
                         </div>
                       </div>
@@ -183,7 +183,7 @@
               </li>
               <li class="itemBox__cell flex-grow-0 itemBox__cell--action JS_itemBox__cell--remove JS_itemBox__action">
                 <div class="itemBox__cellInner">
-                  <div class="itemBox__action itemBox__action--secondary JS_itemBox__action--remove">—</div>
+                  <div class="itemBox__action itemBox__action--secondary JS_itemBox__action--remove"></div>
                 </div>
               </li>
             </ul>
@@ -197,12 +197,12 @@
     <ul class="itemBox__row itemBox__row--item JS_optionsTitle">
       <li class="itemBox__cell itemBox__cell--action JS_toggle">
         <div class="itemBox__cellInner">
-          <div class="itemBox__action">अ All</div>
+          <div class="itemBox__action"> All</div>
         </div>
       </li>
       <li class="itemBox__cell flex-grow-0 itemBox__cell--action JS_itemBox__cell--remove JS_itemBox__cell--removeAll JS_itemBox__action">
         <div class="itemBox__cellInner">
-          <div class="itemBox__action itemBox__action--secondary JS_itemBox__action--removeAll JS_itemBox__action--remove">—</div>
+          <div class="itemBox__action itemBox__action--secondary JS_itemBox__action--removeAll JS_itemBox__action--remove"></div>
         </div>
       </li>
     </ul>
@@ -217,7 +217,7 @@
               <div class="selector selector--readonly">
                 <div class="selector__item">
                   <div class="selector__block">
-                    <div class="selector__blockPart selector__blockPart--prefix JS_Color JS_Color--prefix" style="background-color: #00bfff;" data-color="#00bfff">ग़</div>
+                    <div class="selector__blockPart selector__blockPart--prefix JS_Color JS_Color--prefix" style="background-color: #00bfff;" data-color="#00bfff"></div>
                     <div class="selector__blockPart selector__blockPart--field JS_text">Design</div>
                   </div>
                 </div>
@@ -228,7 +228,7 @@
         </li>
         <li class="itemBox__cell flex-grow-0 itemBox__cell--action JS_itemBox__cell--remove JS_itemBox__action">
           <div class="itemBox__cellInner">
-            <div class="itemBox__action itemBox__action--secondary JS_itemBox__action--remove">—</div>
+            <div class="itemBox__action itemBox__action--secondary JS_itemBox__action--remove"></div>
           </div>
         </li>
       </ul>
@@ -242,7 +242,7 @@
               <div class="selector selector--readonly">
                 <div class="selector__item">
                   <div class="selector__block">
-                    <div class="selector__blockPart selector__blockPart--prefix JS_Color JS_Color--prefix" style="background-color: #0bda51;" data-color="#0bda51">ग़</div>
+                    <div class="selector__blockPart selector__blockPart--prefix JS_Color JS_Color--prefix" style="background-color: #0bda51;" data-color="#0bda51"></div>
                     <div class="selector__blockPart selector__blockPart--field JS_text">Marketing</div>
                   </div>
                 </div>
@@ -253,7 +253,7 @@
         </li>
         <li class="itemBox__cell flex-grow-0 itemBox__cell--action JS_itemBox__cell--remove JS_itemBox__action">
           <div class="itemBox__cellInner">
-            <div class="itemBox__action itemBox__action--secondary JS_itemBox__action--remove">—</div>
+            <div class="itemBox__action itemBox__action--secondary JS_itemBox__action--remove"></div>
           </div>
         </li>
       </ul>
@@ -267,7 +267,7 @@
               <div class="selector selector--readonly">
                 <div class="selector__item">
                   <div class="selector__block">
-                    <div class="selector__blockPart selector__blockPart--prefix JS_Color JS_Color--prefix" style="background-color: #f4ca16;" data-color="#f4ca16">ग़</div>
+                    <div class="selector__blockPart selector__blockPart--prefix JS_Color JS_Color--prefix" style="background-color: #f4ca16;" data-color="#f4ca16"></div>
                     <div class="selector__blockPart selector__blockPart--field JS_text">Front-end</div>
                   </div>
                 </div>
@@ -278,7 +278,7 @@
         </li>
         <li class="itemBox__cell flex-grow-0 itemBox__cell--action JS_itemBox__cell--remove JS_itemBox__action">
           <div class="itemBox__cellInner">
-            <div class="itemBox__action itemBox__action--secondary JS_itemBox__action--remove">—</div>
+            <div class="itemBox__action itemBox__action--secondary JS_itemBox__action--remove"></div>
           </div>
         </li>
       </ul>
@@ -292,7 +292,7 @@
               <div class="selector selector--readonly">
                 <div class="selector__item">
                   <div class="selector__block">
-                    <div class="selector__blockPart selector__blockPart--prefix JS_Color JS_Color--prefix" style="background-color: #E30022;" data-color="#E30022">ग़</div>
+                    <div class="selector__blockPart selector__blockPart--prefix JS_Color JS_Color--prefix" style="background-color: #E30022;" data-color="#E30022"></div>
                     <div class="selector__blockPart selector__blockPart--field JS_text">Back-end</div>
                   </div>
                 </div>
@@ -303,7 +303,7 @@
         </li>
         <li class="itemBox__cell flex-grow-0 itemBox__cell--action JS_itemBox__cell--remove JS_itemBox__action">
           <div class="itemBox__cellInner">
-            <div class="itemBox__action itemBox__action--secondary JS_itemBox__action--remove">—</div>
+            <div class="itemBox__action itemBox__action--secondary JS_itemBox__action--remove"></div>
           </div>
         </li>
       </ul>
