--- a/_includes/popups/multiSelector-columnpicker.html
+++ b/_includes/popups/multiSelector-columnpicker.html
@@ -14,12 +14,40 @@
     <ul class="itemBox__row itemBox__row--item JS_selectionTitle">
       <li class="itemBox__cell itemBox__cell--action JS_toggle">
         <div class="itemBox__cellInner">
-          <div class="itemBox__action">ऄ Selected</div>
+          <div class="itemBox__action"> Suggested</div>
         </div>
       </li>
       <li class="itemBox__cell flex-grow-0 itemBox__cell--action JS_itemBox__cell--remove JS_itemBox__cell--removeAll JS_itemBox__action">
         <div class="itemBox__cellInner">
-          <div class="itemBox__action itemBox__action--secondary JS_itemBox__action--removeAll JS_itemBox__action--removeAllSelected">—</div>
+          <div class="itemBox__action itemBox__action--secondary JS_itemBox__action--removeAll JS_itemBox__action--removeAllSelected"></div>
+        </div>
+      </li>
+    </ul>
+
+    <div class="itemBox JS_itemBox--children JS_selectionChildren">
+      <ul class="itemBox__row itemBox__row--item itemBox__row--action JS_filterableCell ">
+        <li class="itemBox__cell JS_textAction">
+          <div class="itemBox__cellInner JS_text">
+            <div class="itemBox__value">Suggested item</div>
+          </div>
+        </li>
+        <li class="itemBox__cell flex-grow-0 itemBox__cell--action  JS_itemBox__cell--add JS_itemBox__action">
+          <div class="itemBox__cellInner itemBox__cellInner--action">
+            <div class="itemBox__action JS_itemBox__action--add"></div>
+          </div>
+        </li>
+      </ul>
+    </div><!-- /.itemBox -->
+
+    <ul class="itemBox__row itemBox__row--item JS_selectionTitle">
+      <li class="itemBox__cell itemBox__cell--action JS_toggle">
+        <div class="itemBox__cellInner">
+          <div class="itemBox__action"> Selected</div>
+        </div>
+      </li>
+      <li class="itemBox__cell flex-grow-0 itemBox__cell--action JS_itemBox__cell--remove JS_itemBox__cell--removeAll JS_itemBox__action">
+        <div class="itemBox__cellInner">
+          <div class="itemBox__action itemBox__action--secondary JS_itemBox__action--removeAll JS_itemBox__action--removeAllSelected"></div>
         </div>
       </li>
     </ul>
@@ -40,7 +68,7 @@
             </li>
             <li class="itemBox__cell flex-grow-0 itemBox__cell--action  JS_itemBox__cell--remove JS_itemBox__action">
               <div class="itemBox__cellInner itemBox__cellInner--action">
-                <div class="itemBox__action itemBox__action--secondary JS_itemBox__action--remove">—</div>
+                <div class="itemBox__action itemBox__action--secondary JS_itemBox__action--remove"></div>
               </div>
             </li>
           </ul>
@@ -51,17 +79,17 @@
     <ul class="itemBox__row itemBox__row--item JS_optionsTitle">
       <li class="itemBox__cell itemBox__cell--action JS_toggle">
         <div class="itemBox__cellInner">
-          <div class="itemBox__action">ऄ All</div>
+          <div class="itemBox__action"> All</div>
         </div>
       </li>
       <li class="itemBox__cell flex-grow-0 itemBox__cell--action JS_itemBox__cell--remove JS_itemBox__cell--removeAll JS_itemBox__action">
         <div class="itemBox__cellInner">
-          <div class="itemBox__action itemBox__action--secondary JS_itemBox__action--removeAll JS_itemBox__action--remove">—</div>
+          <div class="itemBox__action itemBox__action--secondary JS_itemBox__action--removeAll JS_itemBox__action--remove"></div>
         </div>
       </li>
       <li class="itemBox__cell flex-grow-0 itemBox__cell--action JS_itemBox__cell--add JS_itemBox__cell--addAll JS_itemBox__action">
         <div class="itemBox__cellInner">
-          <div class="itemBox__action JS_itemBox__action--add JS_itemBox__action--addAll">ބ</div>
+          <div class="itemBox__action JS_itemBox__action--add JS_itemBox__action--addAll"></div>
         </div>
       </li>
     </ul>
@@ -77,14 +105,14 @@
           {% if group.noneSelected == "false" %}
             <li class="itemBox__cell flex-grow-0 itemBox__cell--action JS_itemBox__cell--remove JS_itemBox__cell--removeAll JS_itemBox__action">
               <div class="itemBox__cellInner">
-                <div class="itemBox__action itemBox__action--secondary JS_itemBox__action--removeAll JS_itemBox__action--remove">—</div>
+                <div class="itemBox__action itemBox__action--secondary JS_itemBox__action--removeAll JS_itemBox__action--remove"></div>
               </div>
             </li>
           {% endif %}
           {% if group.allSelected == "false" %}
             <li class="itemBox__cell flex-grow-0 itemBox__cell--action JS_itemBox__cell--add JS_itemBox__cell--addAll JS_itemBox__action">
               <div class="itemBox__cellInner">
-                <div class="itemBox__action JS_itemBox__action--add JS_itemBox__action--addAll">ބ</div>
+                <div class="itemBox__action JS_itemBox__action--add JS_itemBox__action--addAll"></div>
               </div>
             </li>
           {% endif %}
@@ -101,13 +129,13 @@
               {% if item.selected == "true" %}
                 <li class="itemBox__cell flex-grow-0 itemBox__cell--action JS_itemBox__cell--remove JS_itemBox__action">
                   <div class="itemBox__cellInner">
-                    <div class="itemBox__action itemBox__action--secondary JS_itemBox__action--remove">—</div>
+                    <div class="itemBox__action itemBox__action--secondary JS_itemBox__action--remove"></div>
                   </div>
                 </li>
               {% else %}
                 <li class="itemBox__cell flex-grow-0 itemBox__cell--action JS_itemBox__cell--add JS_itemBox__action">
                   <div class="itemBox__cellInner">
-                    <div class="itemBox__action JS_itemBox__action--add">ބ</div>
+                    <div class="itemBox__action JS_itemBox__action--add"></div>
                   </div>
                 </li>
               {% endif %}
