--- a/_includes/popups/new-multiselect.html
+++ b/_includes/popups/new-multiselect.html
@@ -14,7 +14,7 @@
     <ul class="itemBox__row itemBox__row--item JS_selectionTitle">
       <li class="itemBox__cell itemBox__cell--action JS_toggle">
         <div class="itemBox__cellInner">
-          <div class="itemBox__action">ऄ Selected</div>
+          <div class="itemBox__action"> Selected</div>
         </div>
       </li>
       <li class="itemBox__cell align-right">
@@ -24,7 +24,7 @@
       </li>
       <li class="itemBox__cell flex-grow-0 itemBox__cell--action JS_itemBox__cell--remove JS_itemBox__cell--removeAll JS_itemBox__action">
         <div class="itemBox__cellInner">
-          <div class="itemBox__action JS_itemBox__action--remove JS_itemBox__action--removeAll JS_itemBox__action--removeAllSelected">—</div>
+          <div class="itemBox__action JS_itemBox__action--remove JS_itemBox__action--removeAll JS_itemBox__action--removeAllSelected"></div>
         </div>
       </li>
     </ul>
@@ -33,7 +33,7 @@
         <ul class="itemBox__row itemBox__row--item JS_selectionTitleInclude">
           <li class="itemBox__cell itemBox__cell--action JS_toggle">
             <div class="itemBox__cellInner">
-              <div class="itemBox__action">ऄ Include</div>
+              <div class="itemBox__action"> Include</div>
             </div>
           </li>
           <li class="itemBox__cell align-right">
@@ -43,7 +43,7 @@
           </li>
           <li class="itemBox__cell flex-grow-0 itemBox__cell--action JS_itemBox__cell--remove JS_itemBox__cell--removeAll JS_itemBox__action">
             <div class="itemBox__cellInner">
-              <div class="itemBox__action JS_itemBox__action--remove JS_itemBox__action--removeAll JS_itemBox__action--removeAllSelected">—</div>
+              <div class="itemBox__action JS_itemBox__action--remove JS_itemBox__action--removeAll JS_itemBox__action--removeAllSelected"></div>
             </div>
           </li>
         </ul>
@@ -73,7 +73,7 @@
               </li>
               <li class="itemBox__cell flex-grow-0 itemBox__cell--action JS_itemBox__cell--remove JS_itemBox__action">
                 <div class="itemBox__cellInner">
-                  <div class="itemBox__action JS_itemBox__action--remove">—</div>
+                  <div class="itemBox__action JS_itemBox__action--remove"></div>
                 </div>
               </li>
             </ul>
@@ -86,12 +86,12 @@
     <ul class="itemBox__row itemBox__row--item JS_optionsTitle">
       <li class="itemBox__cell itemBox__cell--action JS_toggle">
         <div class="itemBox__cellInner">
-          <div class="itemBox__action">ऄ All</div>
+          <div class="itemBox__action"> All</div>
         </div>
       </li>
       <li class="itemBox__cell flex-grow-0 itemBox__cell--action JS_itemBox__cell--remove JS_itemBox__cell--removeAll JS_itemBox__action">
         <div class="itemBox__cellInner">
-          <div class="itemBox__action JS_itemBox__action--removeAll JS_itemBox__action--remove">—</div>
+          <div class="itemBox__action JS_itemBox__action--removeAll JS_itemBox__action--remove"></div>
         </div>
       </li>
     </ul>
@@ -117,13 +117,13 @@
         {% if item.selected == "true" %}
           <li class="itemBox__cell flex-grow-0 itemBox__cell--action JS_itemBox__cell--remove JS_itemBox__action">
             <div class="itemBox__cellInner">
-              <div class="itemBox__action JS_itemBox__action--remove">—</div>
+              <div class="itemBox__action JS_itemBox__action--remove"></div>
             </div>
           </li>
         {% else %}
           <li class="itemBox__cell flex-grow-0 itemBox__cell--action JS_itemBox__cell--add JS_itemBox__action">
             <div class="itemBox__cellInner">
-              <div class="itemBox__action JS_itemBox__action--add">ބ</div>
+              <div class="itemBox__action JS_itemBox__action--add"></div>
             </div>
           </li>
         {% endif %}
