--- a/_includes/popups/semsearch.html
+++ b/_includes/popups/semsearch.html
@@ -11,7 +11,7 @@
       </li>
       <li class="itemBox__cell flex-grow-0 itemBox__cell--action">
         <div class="itemBox__cellInner">
-          <div class="itemBox__action">ञ</div>
+          <div class="itemBox__action"></div>
         </div>
       </li>
     </ul>
