--- a/_includes/javascript/removeGroupAction.html
+++ b/_includes/javascript/removeGroupAction.html
@@ -1,5 +1,5 @@
 <li class="itemBox__cell flex-grow-0 itemBox__cell--action JS_itemBox__cell--remove JS_itemBox__cell--removeAll JS_itemBox__action">
   <div class="itemBox__cellInner">
-    <div class="itemBox__action itemBox__action--secondary JS_itemBox__action--remove JS_itemBox__action--removeAll">—</div>
+    <div class="itemBox__action itemBox__action--secondary JS_itemBox__action--remove JS_itemBox__action--removeAll"></div>
   </div>
 </li>
