--- a/_includes/javascript/selectedBlock-Exclude.html
+++ b/_includes/javascript/selectedBlock-Exclude.html
@@ -1,7 +1,7 @@
 <ul class="itemBox__row itemBox__row--item JS_selectionTitleExclude">
   <li class="itemBox__cell itemBox__cell--action">
     <div class="itemBox__cellInner">
-      <div class="itemBox__action">ऄ Exclude</div>
+      <div class="itemBox__action"> Exclude</div>
     </div>
   </li>
   <li class="itemBox__cell align-right">
@@ -11,7 +11,7 @@
   </li>
   <li class="itemBox__cell flex-grow-0 itemBox__cell--action JS_itemBox__cell--remove JS_itemBox__cell--removeAll">
     <div class="itemBox__cellInner">
-      <i class="itemBox__action itemBox__action--secondary JS_itemBox__action--remove JS_itemBox__action--removeAll JS_itemBox__action--removeAllSelected">—</i>
+      <i class="itemBox__action itemBox__action--secondary JS_itemBox__action--remove JS_itemBox__action--removeAll JS_itemBox__action--removeAllSelected"></i>
     </div>
   </li>
 </ul>
