--- a/_includes/javascript/selectedBlock.html
+++ b/_includes/javascript/selectedBlock.html
@@ -1,13 +1,13 @@
 <ul class="itemBox__row itemBox__row--item JS_selectionTitle">
     <li class="itemBox__cell itemBox__cell--action">
       <div class="itemBox__cellInner">
-        <div class="itemBox__action">ऄ Selected</div>
+        <div class="itemBox__action"> Selected</div>
       </div>
     </li>
     ${andOrSelector}
     <li class="itemBox__cell flex-grow-0 itemBox__cell--action JS_itemBox__cell--remove">
       <div class="itemBox__cellInner">
-        <div class="itemBox__action itemBox__action--secondary JS_itemBox__action--remove JS_itemBox__action--removeAll JS_itemBox__action--removeAllSelected">—</div>
+        <div class="itemBox__action itemBox__action--secondary JS_itemBox__action--remove JS_itemBox__action--removeAll JS_itemBox__action--removeAllSelected"></div>
       </div>
     </li>
 </ul>
