--- a/_includes/popups/filter-date.html
+++ b/_includes/popups/filter-date.html
@@ -14,7 +14,7 @@
     <ul class="itemBox__row itemBox__row--item JS_selectionTitle">
       <li class="itemBox__cell itemBox__cell--action JS_toggle">
         <div class="itemBox__cellInner">
-          <div class="itemBox__action">ऄ Selected</div>
+          <div class="itemBox__action"> Selected</div>
         </div>
       </li>
       <li class="itemBox__cell align-right">
@@ -24,7 +24,7 @@
       </li>
       <li class="itemBox__cell flex-grow-0 itemBox__cell--action JS_itemBox__cell--remove JS_itemBox__cell--removeAll JS_itemBox__action">
         <div class="itemBox__cellInner">
-          <div class="itemBox__action itemBox__action--secondary JS_itemBox__action--remove JS_itemBox__action--removeAll JS_itemBox__action--removeAllSelected">—</div>
+          <div class="itemBox__action itemBox__action--secondary JS_itemBox__action--remove JS_itemBox__action--removeAll JS_itemBox__action--removeAllSelected"></div>
         </div>
       </li>
     </ul>
@@ -34,7 +34,7 @@
         <ul class="itemBox__row itemBox__row--item JS_selectionTitleInclude">
           <li class="itemBox__cell itemBox__cell--action JS_toggle">
             <div class="itemBox__cellInner">
-              <div class="itemBox__action">ऄ Include</div>
+              <div class="itemBox__action"> Include</div>
             </div>
           </li>
           <li class="itemBox__cell align-right">
@@ -44,7 +44,7 @@
           </li>
           <li class="itemBox__cell flex-grow-0 itemBox__cell--action JS_itemBox__cell--remove JS_itemBox__cell--removeAll JS_itemBox__action">
             <div class="itemBox__cellInner">
-              <div class="itemBox__action itemBox__action--secondary JS_itemBox__action--remove JS_itemBox__action--removeAll JS_itemBox__action--removeAllSelected">—</div>
+              <div class="itemBox__action itemBox__action--secondary JS_itemBox__action--remove JS_itemBox__action--removeAll JS_itemBox__action--removeAllSelected"></div>
             </div>
           </li>
         </ul>
@@ -69,7 +69,7 @@
               </li>
               <li class="itemBox__cell flex-grow-0 itemBox__cell--action JS_itemBox__cell--remove JS_itemBox__cell--removeAll JS_itemBox__action">
                 <div class="itemBox__cellInner">
-                  <div class="itemBox__action itemBox__action--secondary JS_itemBox__action--remove">—</div>
+                  <div class="itemBox__action itemBox__action--secondary JS_itemBox__action--remove"></div>
                 </div>
               </li>
             </ul>
@@ -92,7 +92,7 @@
               </li>
               <li class="itemBox__cell flex-grow-0 itemBox__cell--action JS_itemBox__cell--remove JS_itemBox__cell--removeAll JS_itemBox__action">
                 <div class="itemBox__cellInner">
-                  <div class="itemBox__action itemBox__action--secondary JS_itemBox__action--remove">—</div>
+                  <div class="itemBox__action itemBox__action--secondary JS_itemBox__action--remove"></div>
                 </div>
               </li>
             </ul>
@@ -102,7 +102,7 @@
         <ul class="itemBox__row itemBox__row--item JS_selectionTitleExclude">
           <li class="itemBox__cell itemBox__cell--action JS_toggle">
             <div class="itemBox__cellInner">
-              <div class="itemBox__action">ऄ Exclude</div>
+              <div class="itemBox__action"> Exclude</div>
             </div>
           </li>
           <li class="itemBox__cell align-right">
@@ -112,7 +112,7 @@
           </li>
           <li class="itemBox__cell flex-grow-0 itemBox__cell--action JS_itemBox__cell--remove JS_itemBox__cell--removeAll JS_itemBox__action">
             <div class="itemBox__cellInner">
-              <div class="itemBox__action itemBox__action--secondary JS_itemBox__action--remove JS_itemBox__action--removeAll JS_itemBox__action--removeAllSelected">—</div>
+              <div class="itemBox__action itemBox__action--secondary JS_itemBox__action--remove JS_itemBox__action--removeAll JS_itemBox__action--removeAllSelected"></div>
             </div>
           </li>
         </ul>
@@ -137,7 +137,7 @@
               </li>
               <li class="itemBox__cell flex-grow-0 itemBox__cell--action JS_itemBox__cell--remove JS_itemBox__cell--removeAll JS_itemBox__action">
                 <div class="itemBox__cellInner">
-                  <div class="itemBox__action itemBox__action--secondary JS_itemBox__action--remove">—</div>
+                  <div class="itemBox__action itemBox__action--secondary JS_itemBox__action--remove"></div>
                 </div>
               </li>
             </ul>
@@ -160,7 +160,7 @@
               </li>
               <li class="itemBox__cell flex-grow-0 itemBox__cell--action JS_itemBox__cell--remove JS_itemBox__cell--removeAll JS_itemBox__action">
                 <div class="itemBox__cellInner">
-                  <div class="itemBox__action itemBox__action--secondary JS_itemBox__action--remove">—</div>
+                  <div class="itemBox__action itemBox__action--secondary JS_itemBox__action--remove"></div>
                 </div>
               </li>
             </ul>
@@ -173,12 +173,12 @@
     <ul class="itemBox__row itemBox__row--item JS_optionsTitle">
       <li class="itemBox__cell itemBox__cell--action JS_toggle">
         <div class="itemBox__cellInner">
-          <div class="itemBox__action">अ All</div>
+          <div class="itemBox__action"> All</div>
         </div>
       </li>
       <li class="itemBox__cell flex-grow-0 itemBox__cell--action JS_itemBox__cell--remove JS_itemBox__cell--removeAll JS_itemBox__action">
         <div class="itemBox__cellInner">
-          <div class="itemBox__action itemBox__action--secondary JS_itemBox__action--removeAll JS_itemBox__action--remove">—</div>
+          <div class="itemBox__action itemBox__action--secondary JS_itemBox__action--removeAll JS_itemBox__action--remove"></div>
         </div>
       </li>
     </ul>
@@ -187,12 +187,12 @@
       <ul class="itemBox__row itemBox__row--item">
         <li class="itemBox__cell itemBox__cell--action JS_toggle">
           <div class="itemBox__cellInner">
-            <div class="itemBox__action">अ Smart Dates</div>
+            <div class="itemBox__action"> Smart Dates</div>
           </div>
         </li>
         <li class="itemBox__cell flex-grow-0 itemBox__cell--action JS_itemBox__cell--remove JS_itemBox__cell--removeAll JS_itemBox__action">
           <div class="itemBox__cellInner">
-            <div class="itemBox__action itemBox__action--secondary JS_itemBox__action--removeAll JS_itemBox__action--remove">—</div>
+            <div class="itemBox__action itemBox__action--secondary JS_itemBox__action--removeAll JS_itemBox__action--remove"></div>
           </div>
         </li>
       </ul>
@@ -217,7 +217,7 @@
           </li>
           <li class="itemBox__cell flex-grow-0 itemBox__cell--action JS_itemBox__cell--remove JS_itemBox__cell--removeAll JS_itemBox__action">
             <div class="itemBox__cellInner">
-              <div class="itemBox__action itemBox__action--secondary JS_itemBox__action--remove">—</div>
+              <div class="itemBox__action itemBox__action--secondary JS_itemBox__action--remove"></div>
             </div>
           </li>
         </ul>
@@ -228,12 +228,12 @@
       <ul class="itemBox__row itemBox__row--item">
         <li class="itemBox__cell itemBox__cell--action JS_toggle">
           <div class="itemBox__cellInner">
-            <div class="itemBox__action">अ Simple Dates</div>
+            <div class="itemBox__action"> Simple Dates</div>
           </div>
         </li>
         <li class="itemBox__cell flex-grow-0 itemBox__cell--action JS_itemBox__cell--remove JS_itemBox__cell--removeAll JS_itemBox__action">
           <div class="itemBox__cellInner">
-            <div class="itemBox__action itemBox__action--secondary JS_itemBox__action--removeAll JS_itemBox__action--remove">—</div>
+            <div class="itemBox__action itemBox__action--secondary JS_itemBox__action--removeAll JS_itemBox__action--remove"></div>
           </div>
         </li>
       </ul>
@@ -258,7 +258,7 @@
           </li>
           <li class="itemBox__cell flex-grow-0 itemBox__cell--action JS_itemBox__cell--remove JS_itemBox__cell--removeAll JS_itemBox__action">
             <div class="itemBox__cellInner">
-              <div class="itemBox__action itemBox__action--secondary JS_itemBox__action--remove">—</div>
+              <div class="itemBox__action itemBox__action--secondary JS_itemBox__action--remove"></div>
             </div>
           </li>
         </ul>
@@ -270,12 +270,12 @@
       <ul class="itemBox__row itemBox__row--item">
         <li class="itemBox__cell itemBox__cell--action JS_toggle">
           <div class="itemBox__cellInner">
-            <div class="itemBox__action">अ Ranges</div>
+            <div class="itemBox__action"> Ranges</div>
           </div>
         </li>
         <li class="itemBox__cell flex-grow-0 itemBox__cell--action JS_itemBox__cell--remove JS_itemBox__cell--removeAll JS_itemBox__action">
           <div class="itemBox__cellInner">
-            <div class="itemBox__action itemBox__action--secondary JS_itemBox__action--removeAll JS_itemBox__action--remove">—</div>
+            <div class="itemBox__action itemBox__action--secondary JS_itemBox__action--removeAll JS_itemBox__action--remove"></div>
           </div>
         </li>
       </ul>
@@ -300,7 +300,7 @@
           </li>
           <li class="itemBox__cell flex-grow-0 itemBox__cell--action JS_itemBox__cell--remove JS_itemBox__cell--removeAll JS_itemBox__action">
             <div class="itemBox__cellInner">
-              <div class="itemBox__action itemBox__action--secondary JS_itemBox__action--remove">—</div>
+              <div class="itemBox__action itemBox__action--secondary JS_itemBox__action--remove"></div>
             </div>
           </li>
         </ul>
@@ -311,12 +311,12 @@
       <ul class="itemBox__row itemBox__row--item">
         <li class="itemBox__cell itemBox__cell--action JS_toggle">
           <div class="itemBox__cellInner">
-            <div class="itemBox__action">अ Next/Last</div>
+            <div class="itemBox__action"> Next/Last</div>
           </div>
         </li>
         <li class="itemBox__cell flex-grow-0 itemBox__cell--action JS_itemBox__cell--remove JS_itemBox__cell--removeAll JS_itemBox__action">
           <div class="itemBox__cellInner">
-            <div class="itemBox__action itemBox__action--secondary JS_itemBox__action--removeAll JS_itemBox__action--remove">—</div>
+            <div class="itemBox__action itemBox__action--secondary JS_itemBox__action--removeAll JS_itemBox__action--remove"></div>
           </div>
         </li>
       </ul>
@@ -341,7 +341,7 @@
           </li>
           <li class="itemBox__cell flex-grow-0 itemBox__cell--action JS_itemBox__cell--remove JS_itemBox__cell--removeAll JS_itemBox__action">
             <div class="itemBox__cellInner">
-              <div class="itemBox__action itemBox__action--secondary JS_itemBox__action--remove">—</div>
+              <div class="itemBox__action itemBox__action--secondary JS_itemBox__action--remove"></div>
             </div>
           </li>
         </ul>
