--- a/_includes/popups/multiSelector-tags-colors.html
+++ b/_includes/popups/multiSelector-tags-colors.html
@@ -17,12 +17,12 @@
     <ul class="itemBox__row itemBox__row--item JS_selectionTitle">
       <li class="itemBox__cell itemBox__cell--action JS_toggle">
         <div class="itemBox__cellInner">
-          <div class="itemBox__action">ऄ Selected</div>
+          <div class="itemBox__action"> Selected</div>
         </div>
       </li>
       <li class="itemBox__cell flex-grow-0 itemBox__cell--action JS_itemBox__cell--remove JS_itemBox__cell--removeAll JS_itemBox__action">
         <div class="itemBox__cellInner">
-          <div class="itemBox__action itemBox__action--secondary JS_itemBox__action--remove JS_itemBox__action--removeAll JS_itemBox__action--removeAllSelected">—</div>
+          <div class="itemBox__action itemBox__action--secondary JS_itemBox__action--remove JS_itemBox__action--removeAll JS_itemBox__action--removeAllSelected"></div>
         </div>
       </li>
     </ul>
@@ -54,7 +54,7 @@
             </li>
             <li class="itemBox__cell flex-grow-0 itemBox__cell--action JS_itemBox__cell--remove JS_itemBox__action">
               <div class="itemBox__cellInner">
-                <div class="itemBox__action itemBox__action--secondary JS_itemBox__action--remove">—</div>
+                <div class="itemBox__action itemBox__action--secondary JS_itemBox__action--remove"></div>
               </div>
             </li>
           </ul>
@@ -66,17 +66,17 @@
     <ul class="itemBox__row itemBox__row--item JS_optionsTitle">
       <li class="itemBox__cell itemBox__cell--toggle JS_toggle">
         <div class="itemBox__cellInner">
-          <div class="itemBox__action">ऄ All</div>
+          <div class="itemBox__action"> All</div>
         </div>
       </li>
       <li class="itemBox__cell flex-grow-0 itemBox__cell--action JS_itemBox__cell--remove JS_itemBox__cell--removeAll JS_itemBox__action">
         <div class="itemBox__cellInner">
-          <div class="itemBox__action itemBox__action--secondary JS_itemBox__action--removeAll JS_itemBox__action--remove">—</div>
+          <div class="itemBox__action itemBox__action--secondary JS_itemBox__action--removeAll JS_itemBox__action--remove"></div>
         </div>
       </li>
       <li class="itemBox__cell flex-grow-0 itemBox__cell--action JS_itemBox__cell--add JS_itemBox__cell--addAll JS_itemBox__action">
         <div class="itemBox__cellInner">
-          <div class="itemBox__action JS_itemBox__action--add JS_itemBox__action--addAll">ބ</div>
+          <div class="itemBox__action JS_itemBox__action--add JS_itemBox__action--addAll"></div>
         </div>
       </li>
     </ul>
@@ -104,13 +104,13 @@
           {% if item.selected == "true" %}
             <li class="itemBox__cell flex-grow-0 itemBox__cell--action JS_itemBox__cell--remove JS_itemBox__action">
               <div class="itemBox__cellInner">
-                <div class="itemBox__action itemBox__action--secondary JS_itemBox__action--remove">—</div>
+                <div class="itemBox__action itemBox__action--secondary JS_itemBox__action--remove"></div>
               </div>
             </li>
           {% else %}
             <li class="itemBox__cell flex-grow-0 itemBox__cell--action JS_itemBox__cell--add JS_itemBox__action">
               <div class="itemBox__cellInner">
-                <div class="itemBox__action JS_itemBox__action--add">ބ</div>
+                <div class="itemBox__action JS_itemBox__action--add"></div>
               </div>
             </li>
           {% endif %}
