--- a/sass/components/field.scss
+++ b/sass/components/field.scss
@@ -11,7 +11,7 @@
   &--error {
     .field {
       &__label {
-        color: --color-secondary;
+        color: var(--color-secondary);
       }
     }
   }
@@ -35,19 +35,6 @@
 
     .field__input {
     }
-  }
-
-  &__focus-trigger {
-    position: absolute;
-    top: 0;
-    left: 0;
-    background-color: rgba(255, 255, 255, 0);
-    width: 100%;
-    height: 100%;
-    z-index: 1;
-    padding: 32px 10px 16px 10px;
-    outline: 0;
-    opacity: 0;
   }
 
   &__label {
@@ -95,5 +82,15 @@
       pointer-events: none;
       z-index: 2;
     }
+
+    input {
+      width: 100%;
+    }
+  }
+
+  &__error {
+    font-size: 12px;
+    padding: 0 5px;
+    color: var(--color-secondary);
   }
 }
