--- a/sass/framework.scss
+++ b/sass/framework.scss
@@ -201,7 +201,13 @@
   }
 }
 @keyframes animate-popup {
+  25% {
+    transform: scale(1.1);
+  }
   50% {
+    transform: scale(1);
+  }
+  75% {
     transform: scale(1.1);
   }
   100% {
